Fix stories and add HW wallet alert

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -664,6 +664,9 @@
   "components.governance.withdrawWarningButton": "Participate on governance",
   "components.governance.enterDRepID": "Enter DRep ID",
   "components.governance.enterPassword": "Enter password to sign this transaction",
+  "components.governance.hardwareWalletSupportComingSoon": "Hardware wallet support coming soon",
+  "components.governance.workingOnHardwareWalletSupport": "We are currently working on integrating hardware wallet support for Governance",
+  "components.governance.goToWallet": "Go to wallet",
   "crypto.errors.rewardAddressEmpty": "Reward address is empty.",
   "crypto.keystore.approveTransaction": "Authorize with your biometrics",
   "crypto.keystore.cancelButton": "Cancel",
