--- a/apps/wallet-mobile/translations/messages/src/features/Staking/Governance/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Staking/Governance/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Governance centre",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 61,
+      "line": 64,
       "column": 25,
-      "index": 3735
+      "index": 3988
     },
     "end": {
-      "line": 64,
+      "line": 67,
       "column": 3,
-      "index": 3839
+      "index": 4092
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Confirm transaction",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 65,
+      "line": 68,
       "column": 18,
-      "index": 3859
+      "index": 4112
     },
     "end": {
-      "line": 68,
+      "line": 71,
       "column": 3,
-      "index": 3958
+      "index": 4211
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Learn more About Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 69,
+      "line": 72,
       "column": 28,
-      "index": 3988
+      "index": 4241
     },
     "end": {
-      "line": 72,
+      "line": 75,
       "column": 3,
-      "index": 4105
+      "index": 4358
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Delegate to a DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 73,
+      "line": 76,
       "column": 30,
-      "index": 4137
+      "index": 4390
     },
     "end": {
-      "line": 76,
+      "line": 79,
       "column": 3,
-      "index": 4247
+      "index": 4500
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!You are designating someone else to cast vote on your behalf for all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 77,
+      "line": 80,
       "column": 36,
-      "index": 4285
+      "index": 4538
     },
     "end": {
-      "line": 81,
+      "line": 84,
       "column": 3,
-      "index": 4490
+      "index": 4743
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Abstain",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 82,
+      "line": 85,
       "column": 22,
-      "index": 4514
+      "index": 4767
     },
     "end": {
-      "line": 85,
+      "line": 88,
       "column": 3,
-      "index": 4605
+      "index": 4858
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!You are choosing not to cast a vote on all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 86,
+      "line": 89,
       "column": 28,
-      "index": 4635
+      "index": 4888
     },
     "end": {
-      "line": 89,
+      "line": 92,
       "column": 3,
-      "index": 4800
+      "index": 5053
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!No confidence",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 90,
+      "line": 93,
       "column": 27,
-      "index": 4829
+      "index": 5082
     },
     "end": {
-      "line": 93,
+      "line": 96,
       "column": 3,
-      "index": 4931
+      "index": 5184
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!You are expressing a lack of trust for all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 94,
+      "line": 97,
       "column": 33,
-      "index": 4966
+      "index": 5219
     },
     "end": {
-      "line": 97,
+      "line": 100,
       "column": 3,
-      "index": 5136
+      "index": 5389
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!DRep Key",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 98,
+      "line": 101,
       "column": 11,
-      "index": 5149
+      "index": 5402
     },
     "end": {
-      "line": 101,
+      "line": 104,
       "column": 3,
-      "index": 5230
+      "index": 5483
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Delegating to a DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 102,
+      "line": 105,
       "column": 21,
-      "index": 5253
+      "index": 5506
     },
     "end": {
-      "line": 105,
+      "line": 108,
       "column": 3,
-      "index": 5356
+      "index": 5609
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Abstaining",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 106,
+      "line": 109,
       "column": 14,
-      "index": 5372
+      "index": 5625
     },
     "end": {
-      "line": 109,
+      "line": 112,
       "column": 3,
-      "index": 5458
+      "index": 5711
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Delegate voting to {drepID}",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 110,
+      "line": 113,
       "column": 24,
-      "index": 5484
+      "index": 5737
     },
     "end": {
-      "line": 113,
+      "line": 116,
       "column": 3,
-      "index": 5597
+      "index": 5850
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!Select abstain",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 114,
+      "line": 117,
       "column": 17,
-      "index": 5616
+      "index": 5869
     },
     "end": {
-      "line": 117,
+      "line": 120,
       "column": 3,
-      "index": 5709
+      "index": 5962
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!Select no confidence",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 118,
+      "line": 121,
       "column": 22,
-      "index": 5733
+      "index": 5986
     },
     "end": {
-      "line": 121,
+      "line": 124,
       "column": 3,
-      "index": 5837
+      "index": 6090
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!Operations",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 122,
+      "line": 125,
       "column": 14,
-      "index": 5853
+      "index": 6106
     },
     "end": {
-      "line": 125,
+      "line": 128,
       "column": 3,
-      "index": 5939
+      "index": 6192
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!Enter password to sign this transaction",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 126,
+      "line": 129,
       "column": 17,
-      "index": 5958
+      "index": 6211
     },
     "end": {
-      "line": 129,
+      "line": 132,
       "column": 3,
-      "index": 6076
+      "index": 6329
     }
   },
   {
@@ -259,14 +259,14 @@
     "defaultMessage": "!!!Drep ID",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 130,
+      "line": 133,
       "column": 10,
-      "index": 6088
+      "index": 6341
     },
     "end": {
-      "line": 133,
+      "line": 136,
       "column": 3,
-      "index": 6167
+      "index": 6420
     }
   },
   {
@@ -274,14 +274,14 @@
     "defaultMessage": "!!!Thank you for participating in Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 134,
+      "line": 137,
       "column": 28,
-      "index": 6197
+      "index": 6450
     },
     "end": {
-      "line": 137,
+      "line": 140,
       "column": 3,
-      "index": 6328
+      "index": 6581
     }
   },
   {
@@ -289,14 +289,14 @@
     "defaultMessage": "!!!This transaction can take a while!",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 138,
+      "line": 141,
       "column": 32,
-      "index": 6362
+      "index": 6615
     },
     "end": {
-      "line": 141,
+      "line": 144,
       "column": 3,
-      "index": 6490
+      "index": 6743
     }
   },
   {
@@ -304,14 +304,14 @@
     "defaultMessage": "!!!Participating in the Cardano Governance gives you the opportunity to participate in the voting as well as withdraw your staking rewards",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 142,
+      "line": 145,
       "column": 25,
-      "index": 6517
+      "index": 6770
     },
     "end": {
-      "line": 146,
+      "line": 149,
       "column": 3,
-      "index": 6745
+      "index": 6998
     }
   },
   {
@@ -319,14 +319,14 @@
     "defaultMessage": "!!!Go to Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 147,
+      "line": 150,
       "column": 18,
-      "index": 6765
+      "index": 7018
     },
     "end": {
-      "line": 150,
+      "line": 153,
       "column": 3,
-      "index": 6861
+      "index": 7114
     }
   },
   {
@@ -334,14 +334,14 @@
     "defaultMessage": "!!!Find a DRep here",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 151,
+      "line": 154,
       "column": 16,
-      "index": 6879
+      "index": 7132
     },
     "end": {
-      "line": 154,
+      "line": 157,
       "column": 3,
-      "index": 6973
+      "index": 7226
     }
   },
   {
@@ -349,14 +349,14 @@
     "defaultMessage": "!!!Review the selections carefully to assign yourself a Governance Status",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 155,
+      "line": 158,
       "column": 17,
-      "index": 6992
+      "index": 7245
     },
     "end": {
-      "line": 158,
+      "line": 161,
       "column": 3,
-      "index": 7141
+      "index": 7394
     }
   },
   {
@@ -364,14 +364,14 @@
     "defaultMessage": "!!!You have selected <b>{action}</b> as your governance status.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 159,
+      "line": 162,
       "column": 34,
-      "index": 7177
+      "index": 7430
     },
     "end": {
-      "line": 162,
+      "line": 165,
       "column": 3,
-      "index": 7333
+      "index": 7586
     }
   },
   {
@@ -379,14 +379,14 @@
     "defaultMessage": "!!!You have selected <b>{action}</b> as your governance status. You can change it at any time by clicking in the card below.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 163,
+      "line": 166,
       "column": 25,
-      "index": 7360
+      "index": 7613
     },
     "end": {
-      "line": 167,
+      "line": 170,
       "column": 3,
-      "index": 7574
+      "index": 7827
     }
   },
   {
@@ -394,14 +394,14 @@
     "defaultMessage": "!!!Change DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 168,
+      "line": 171,
       "column": 14,
-      "index": 7590
+      "index": 7843
     },
     "end": {
-      "line": 171,
+      "line": 174,
       "column": 3,
-      "index": 7677
+      "index": 7930
     }
   },
   {
@@ -409,14 +409,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 172,
+      "line": 175,
       "column": 11,
-      "index": 7690
+      "index": 7943
     },
     "end": {
-      "line": 175,
+      "line": 178,
       "column": 3,
-      "index": 7770
+      "index": 8023
     }
   },
   {
@@ -424,14 +424,14 @@
     "defaultMessage": "!!!Transaction details",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 176,
+      "line": 179,
       "column": 22,
-      "index": 7794
+      "index": 8047
     },
     "end": {
-      "line": 179,
+      "line": 182,
       "column": 3,
-      "index": 7897
+      "index": 8150
     }
   },
   {
@@ -439,14 +439,14 @@
     "defaultMessage": "!!!Total",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 180,
+      "line": 183,
       "column": 9,
-      "index": 7908
+      "index": 8161
     },
     "end": {
-      "line": 183,
+      "line": 186,
       "column": 3,
-      "index": 7984
+      "index": 8237
     }
   },
   {
@@ -454,14 +454,14 @@
     "defaultMessage": "!!!Transaction failed",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 184,
+      "line": 187,
       "column": 21,
-      "index": 8007
+      "index": 8260
     },
     "end": {
-      "line": 187,
+      "line": 190,
       "column": 3,
-      "index": 8108
+      "index": 8361
     }
   },
   {
@@ -469,14 +469,14 @@
     "defaultMessage": "!!!Your transaction has not been processed properly due to technical issues",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 188,
+      "line": 191,
       "column": 32,
-      "index": 8142
+      "index": 8395
     },
     "end": {
-      "line": 191,
+      "line": 194,
       "column": 3,
-      "index": 8308
+      "index": 8561
     }
   },
   {
@@ -484,14 +484,14 @@
     "defaultMessage": "!!!Try again",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 192,
+      "line": 195,
       "column": 12,
-      "index": 8322
+      "index": 8575
     },
     "end": {
-      "line": 195,
+      "line": 198,
       "column": 3,
-      "index": 8405
+      "index": 8658
     }
   },
   {
@@ -499,14 +499,14 @@
     "defaultMessage": "!!!Withdraw warning",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 196,
+      "line": 199,
       "column": 24,
-      "index": 8431
+      "index": 8684
     },
     "end": {
-      "line": 199,
+      "line": 202,
       "column": 3,
-      "index": 8533
+      "index": 8786
     }
   },
   {
@@ -514,14 +514,14 @@
     "defaultMessage": "!!!To withdraw your rewards, you need to participate in the Cardano Governance. Your rewards will continue to accumulate, but you are only able to withdraw it once you join the Governance process.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 200,
+      "line": 203,
       "column": 30,
-      "index": 8565
+      "index": 8818
     },
     "end": {
-      "line": 204,
+      "line": 207,
       "column": 3,
-      "index": 8856
+      "index": 9109
     }
   },
   {
@@ -529,14 +529,14 @@
     "defaultMessage": "!!!Participate on governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 205,
+      "line": 208,
       "column": 25,
-      "index": 8883
+      "index": 9136
     },
     "end": {
-      "line": 208,
+      "line": 211,
       "column": 3,
-      "index": 8995
+      "index": 9248
     }
   },
   {
@@ -544,14 +544,59 @@
     "defaultMessage": "!!!Enter DRep ID",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 209,
+      "line": 212,
       "column": 15,
-      "index": 9012
+      "index": 9265
     },
     "end": {
-      "line": 212,
+      "line": 215,
       "column": 3,
-      "index": 9102
+      "index": 9355
+    }
+  },
+  {
+    "id": "components.governance.hardwareWalletSupportComingSoon",
+    "defaultMessage": "!!!Hardware wallet support coming soon",
+    "file": "src/features/Staking/Governance/common/strings.ts",
+    "start": {
+      "line": 216,
+      "column": 35,
+      "index": 9392
+    },
+    "end": {
+      "line": 219,
+      "column": 3,
+      "index": 9524
+    }
+  },
+  {
+    "id": "components.governance.workingOnHardwareWalletSupport",
+    "defaultMessage": "!!!We are currently working on integrating hardware wallet support for Governance",
+    "file": "src/features/Staking/Governance/common/strings.ts",
+    "start": {
+      "line": 220,
+      "column": 34,
+      "index": 9560
+    },
+    "end": {
+      "line": 223,
+      "column": 3,
+      "index": 9734
+    }
+  },
+  {
+    "id": "components.governance.goToWallet",
+    "defaultMessage": "!!!Go to wallet",
+    "file": "src/features/Staking/Governance/common/strings.ts",
+    "start": {
+      "line": 224,
+      "column": 14,
+      "index": 9750
+    },
+    "end": {
+      "line": 227,
+      "column": 3,
+      "index": 9838
     }
   }
 ]
