--- a/apps/wallet-mobile/translations/messages/src/features/Staking/Governance/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Staking/Governance/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Governance centre",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 64,
+      "line": 67,
       "column": 25,
-      "index": 3988
+      "index": 4177
     },
     "end": {
-      "line": 67,
+      "line": 70,
       "column": 3,
-      "index": 4092
+      "index": 4281
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Confirm transaction",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 68,
+      "line": 71,
       "column": 18,
-      "index": 4112
+      "index": 4301
     },
     "end": {
-      "line": 71,
+      "line": 74,
       "column": 3,
-      "index": 4211
+      "index": 4400
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Learn more About Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 72,
+      "line": 75,
       "column": 28,
-      "index": 4241
+      "index": 4430
     },
     "end": {
-      "line": 75,
+      "line": 78,
       "column": 3,
-      "index": 4358
+      "index": 4547
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Delegate to a DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 76,
+      "line": 79,
       "column": 30,
-      "index": 4390
+      "index": 4579
     },
     "end": {
-      "line": 79,
+      "line": 82,
       "column": 3,
-      "index": 4500
+      "index": 4689
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!You are designating someone else to cast vote on your behalf for all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 80,
+      "line": 83,
       "column": 36,
-      "index": 4538
+      "index": 4727
     },
     "end": {
-      "line": 84,
+      "line": 87,
       "column": 3,
-      "index": 4743
+      "index": 4932
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Abstain",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 85,
+      "line": 88,
       "column": 22,
-      "index": 4767
+      "index": 4956
     },
     "end": {
-      "line": 88,
+      "line": 91,
       "column": 3,
-      "index": 4858
+      "index": 5047
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!You are choosing not to cast a vote on all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 89,
+      "line": 92,
       "column": 28,
-      "index": 4888
+      "index": 5077
     },
     "end": {
-      "line": 92,
+      "line": 95,
       "column": 3,
-      "index": 5053
+      "index": 5242
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!No confidence",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 93,
+      "line": 96,
       "column": 27,
-      "index": 5082
+      "index": 5271
     },
     "end": {
-      "line": 96,
+      "line": 99,
       "column": 3,
-      "index": 5184
+      "index": 5373
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!You are expressing a lack of trust for all proposals now and in the future.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 97,
+      "line": 100,
       "column": 33,
-      "index": 5219
+      "index": 5408
     },
     "end": {
-      "line": 100,
+      "line": 103,
       "column": 3,
-      "index": 5389
+      "index": 5578
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!DRep Key",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 101,
+      "line": 104,
       "column": 11,
-      "index": 5402
+      "index": 5591
     },
     "end": {
-      "line": 104,
+      "line": 107,
       "column": 3,
-      "index": 5483
+      "index": 5672
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Delegating to a DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 105,
+      "line": 108,
       "column": 21,
-      "index": 5506
+      "index": 5695
     },
     "end": {
-      "line": 108,
+      "line": 111,
       "column": 3,
-      "index": 5609
+      "index": 5798
     }
   },
   {
@@ -169,29 +169,29 @@
     "defaultMessage": "!!!Abstaining",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 109,
+      "line": 112,
       "column": 14,
-      "index": 5625
+      "index": 5814
     },
     "end": {
-      "line": 112,
+      "line": 115,
       "column": 3,
-      "index": 5711
+      "index": 5900
     }
   },
   {
     "id": "components.governance.delegateVotingToDRep",
-    "defaultMessage": "!!!Delegate voting to {drepID}",
+    "defaultMessage": "!!!Delegate voting to \n{drepID}",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 113,
+      "line": 116,
       "column": 24,
-      "index": 5737
+      "index": 5926
     },
     "end": {
-      "line": 116,
+      "line": 119,
       "column": 3,
-      "index": 5850
+      "index": 6041
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!Select abstain",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 117,
+      "line": 120,
       "column": 17,
-      "index": 5869
+      "index": 6060
     },
     "end": {
-      "line": 120,
+      "line": 123,
       "column": 3,
-      "index": 5962
+      "index": 6153
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!Select no confidence",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 121,
+      "line": 124,
       "column": 22,
-      "index": 5986
+      "index": 6177
     },
     "end": {
-      "line": 124,
+      "line": 127,
       "column": 3,
-      "index": 6090
+      "index": 6281
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!Operations",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 125,
+      "line": 128,
       "column": 14,
-      "index": 6106
+      "index": 6297
     },
     "end": {
-      "line": 128,
+      "line": 131,
       "column": 3,
-      "index": 6192
+      "index": 6383
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!Enter password to sign this transaction",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 129,
+      "line": 132,
       "column": 17,
-      "index": 6211
+      "index": 6402
     },
     "end": {
-      "line": 132,
+      "line": 135,
       "column": 3,
-      "index": 6329
+      "index": 6520
     }
   },
   {
@@ -259,14 +259,14 @@
     "defaultMessage": "!!!Drep ID",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 133,
+      "line": 136,
       "column": 10,
-      "index": 6341
+      "index": 6532
     },
     "end": {
-      "line": 136,
+      "line": 139,
       "column": 3,
-      "index": 6420
+      "index": 6611
     }
   },
   {
@@ -274,14 +274,14 @@
     "defaultMessage": "!!!Thank you for participating in Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 137,
+      "line": 140,
       "column": 28,
-      "index": 6450
+      "index": 6641
     },
     "end": {
-      "line": 140,
+      "line": 143,
       "column": 3,
-      "index": 6581
+      "index": 6772
     }
   },
   {
@@ -289,14 +289,14 @@
     "defaultMessage": "!!!This transaction can take a while!",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 141,
+      "line": 144,
       "column": 32,
-      "index": 6615
+      "index": 6806
     },
     "end": {
-      "line": 144,
+      "line": 147,
       "column": 3,
-      "index": 6743
+      "index": 6934
     }
   },
   {
@@ -304,14 +304,14 @@
     "defaultMessage": "!!!Participating in the Cardano Governance gives you the opportunity to participate in the voting as well as withdraw your staking rewards",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 145,
+      "line": 148,
       "column": 25,
-      "index": 6770
+      "index": 6961
     },
     "end": {
-      "line": 149,
+      "line": 152,
       "column": 3,
-      "index": 6998
+      "index": 7189
     }
   },
   {
@@ -319,14 +319,14 @@
     "defaultMessage": "!!!Go to Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 150,
+      "line": 153,
       "column": 18,
-      "index": 7018
+      "index": 7209
     },
     "end": {
-      "line": 153,
+      "line": 156,
       "column": 3,
-      "index": 7114
+      "index": 7305
     }
   },
   {
@@ -334,14 +334,14 @@
     "defaultMessage": "!!!Find a DRep here",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 154,
+      "line": 157,
       "column": 16,
-      "index": 7132
+      "index": 7323
     },
     "end": {
-      "line": 157,
+      "line": 160,
       "column": 3,
-      "index": 7226
+      "index": 7417
     }
   },
   {
@@ -349,14 +349,14 @@
     "defaultMessage": "!!!Review the selections carefully to assign yourself a Governance Status",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 158,
+      "line": 161,
       "column": 17,
-      "index": 7245
+      "index": 7436
     },
     "end": {
-      "line": 161,
+      "line": 164,
       "column": 3,
-      "index": 7394
+      "index": 7585
     }
   },
   {
@@ -364,14 +364,14 @@
     "defaultMessage": "!!!You have selected <b>{action}</b> as your governance status.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 162,
+      "line": 165,
       "column": 34,
-      "index": 7430
+      "index": 7621
     },
     "end": {
-      "line": 165,
+      "line": 168,
       "column": 3,
-      "index": 7586
+      "index": 7777
     }
   },
   {
@@ -379,14 +379,14 @@
     "defaultMessage": "!!!You have selected <b>{action}</b> as your governance status. You can change it at any time by clicking in the card below.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 166,
+      "line": 169,
       "column": 25,
-      "index": 7613
+      "index": 7804
     },
     "end": {
-      "line": 170,
+      "line": 173,
       "column": 3,
-      "index": 7827
+      "index": 8018
     }
   },
   {
@@ -394,14 +394,14 @@
     "defaultMessage": "!!!Change DRep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 171,
+      "line": 174,
       "column": 14,
-      "index": 7843
+      "index": 8034
     },
     "end": {
-      "line": 174,
+      "line": 177,
       "column": 3,
-      "index": 7930
+      "index": 8121
     }
   },
   {
@@ -409,14 +409,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 175,
+      "line": 178,
       "column": 11,
-      "index": 7943
+      "index": 8134
     },
     "end": {
-      "line": 178,
+      "line": 181,
       "column": 3,
-      "index": 8023
+      "index": 8214
     }
   },
   {
@@ -424,14 +424,14 @@
     "defaultMessage": "!!!Transaction details",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 179,
+      "line": 182,
       "column": 22,
-      "index": 8047
+      "index": 8238
     },
     "end": {
-      "line": 182,
+      "line": 185,
       "column": 3,
-      "index": 8150
+      "index": 8341
     }
   },
   {
@@ -439,14 +439,14 @@
     "defaultMessage": "!!!Total",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 183,
+      "line": 186,
       "column": 9,
-      "index": 8161
+      "index": 8352
     },
     "end": {
-      "line": 186,
+      "line": 189,
       "column": 3,
-      "index": 8237
+      "index": 8428
     }
   },
   {
@@ -454,14 +454,14 @@
     "defaultMessage": "!!!Transaction failed",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 187,
+      "line": 190,
       "column": 21,
-      "index": 8260
+      "index": 8451
     },
     "end": {
-      "line": 190,
+      "line": 193,
       "column": 3,
-      "index": 8361
+      "index": 8552
     }
   },
   {
@@ -469,14 +469,14 @@
     "defaultMessage": "!!!Your transaction has not been processed properly due to technical issues",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 191,
+      "line": 194,
       "column": 32,
-      "index": 8395
+      "index": 8586
     },
     "end": {
-      "line": 194,
+      "line": 197,
       "column": 3,
-      "index": 8561
+      "index": 8752
     }
   },
   {
@@ -484,14 +484,14 @@
     "defaultMessage": "!!!Try again",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 195,
+      "line": 198,
       "column": 12,
-      "index": 8575
+      "index": 8766
     },
     "end": {
-      "line": 198,
+      "line": 201,
       "column": 3,
-      "index": 8658
+      "index": 8849
     }
   },
   {
@@ -499,14 +499,14 @@
     "defaultMessage": "!!!Withdraw warning",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 199,
+      "line": 202,
       "column": 24,
-      "index": 8684
+      "index": 8875
     },
     "end": {
-      "line": 202,
+      "line": 205,
       "column": 3,
-      "index": 8786
+      "index": 8977
     }
   },
   {
@@ -514,14 +514,14 @@
     "defaultMessage": "!!!To withdraw your rewards, you need to participate in the Cardano Governance. Your rewards will continue to accumulate, but you are only able to withdraw it once you join the Governance process.",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 203,
+      "line": 206,
       "column": 30,
-      "index": 8818
+      "index": 9009
     },
     "end": {
-      "line": 207,
+      "line": 210,
       "column": 3,
-      "index": 9109
+      "index": 9300
     }
   },
   {
@@ -529,29 +529,29 @@
     "defaultMessage": "!!!Participate on governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 208,
+      "line": 211,
       "column": 25,
-      "index": 9136
+      "index": 9327
     },
     "end": {
-      "line": 211,
+      "line": 214,
       "column": 3,
-      "index": 9248
+      "index": 9439
     }
   },
   {
     "id": "components.governance.enterDRepID",
-    "defaultMessage": "!!!Enter DRep ID",
+    "defaultMessage": "!!!Choose your Drep",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 212,
+      "line": 215,
       "column": 15,
-      "index": 9265
+      "index": 9456
     },
     "end": {
-      "line": 215,
+      "line": 218,
       "column": 3,
-      "index": 9355
+      "index": 9549
     }
   },
   {
@@ -559,14 +559,14 @@
     "defaultMessage": "!!!Hardware wallet support coming soon",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 216,
+      "line": 219,
       "column": 35,
-      "index": 9392
+      "index": 9586
     },
     "end": {
-      "line": 219,
+      "line": 222,
       "column": 3,
-      "index": 9524
+      "index": 9718
     }
   },
   {
@@ -574,14 +574,14 @@
     "defaultMessage": "!!!We are currently working on integrating hardware wallet support for Governance",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 220,
+      "line": 223,
       "column": 34,
-      "index": 9560
+      "index": 9754
     },
     "end": {
-      "line": 223,
+      "line": 226,
       "column": 3,
-      "index": 9734
+      "index": 9928
     }
   },
   {
@@ -589,14 +589,59 @@
     "defaultMessage": "!!!Go to wallet",
     "file": "src/features/Staking/Governance/common/strings.ts",
     "start": {
-      "line": 224,
+      "line": 227,
       "column": 14,
-      "index": 9750
+      "index": 9944
     },
     "end": {
-      "line": 227,
+      "line": 230,
       "column": 3,
-      "index": 9838
+      "index": 10032
+    }
+  },
+  {
+    "id": "components.governance.txFees",
+    "defaultMessage": "!!!Transaction fee",
+    "file": "src/features/Staking/Governance/common/strings.ts",
+    "start": {
+      "line": 231,
+      "column": 10,
+      "index": 10044
+    },
+    "end": {
+      "line": 234,
+      "column": 3,
+      "index": 10131
+    }
+  },
+  {
+    "id": "components.governance.registerStakingKey",
+    "defaultMessage": "!!!Register staking key",
+    "file": "src/features/Staking/Governance/common/strings.ts",
+    "start": {
+      "line": 235,
+      "column": 22,
+      "index": 10155
+    },
+    "end": {
+      "line": 238,
+      "column": 3,
+      "index": 10259
+    }
+  },
+  {
+    "id": "components.governance.enterDrepIDInfo",
+    "defaultMessage": "!!!Identify your preferred DRep and enter their ID below to delegate your vote",
+    "file": "src/features/Staking/Governance/common/strings.ts",
+    "start": {
+      "line": 239,
+      "column": 19,
+      "index": 10280
+    },
+    "end": {
+      "line": 242,
+      "column": 3,
+      "index": 10436
     }
   }
 ]
